# GenderRecognizer

./: CMakeLists.txt  ExampleUpdate.cpp  FaceAlignment.cpp  FaceAlignment.h  GenderRecognizer.cpp  GenderRecognizer.h  GenderRecognizer.vcxproj  GenderRecognizer.vcxproj.filters  README.md  SmileRecognizer.h  exampleSimple.cpp  exampleTest.cpp
Debug/: CL.read.1.tlog  CL.write.1.tlog  GenderRecognizer.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
data/: gender_classifier.xml  gender_classifier_25imgs.xml  gender_classifier_old_108_125.xml
data/data1/: data.ext  data2.ext
data/testimages/: all.ext  data.ext  female.ext
data1/: Index of C  Users Home Documents Visual Studio 2012 Projects GenderRecognizer GenderRecognizer data1 .htm  data.ext
examples/: ExampleUpdate.cpp  exampleSimple.cpp  exampleTest.cpp  exampleWebCam.cpp
lib/: CMakeLists.txt
